--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="script.js" defer></script>  
 </head>
 <body>
+  <header>Michael Bond
+  </header>
+  <p>The Basics</p>  <p>The Story</p>
   <div>
     <div id="card"></div>
     <div id="name"></div>
